Fix spacing

--- a/formatting.css
+++ b/formatting.css
@@ -2,3 +2,8 @@ img {
 	height: 100px;
 	width: 100px;
 }
+table, tr, td {
+	border: 1px;
+	margin: 0px;
+	padding: 0px;
+}
